<resources>
    <string name="app_name">Pace Eats</string>
    <string name="button_more">More</string>
    <string name="nutrition">Nutrition</string>
    <string name="home">Home</string>
    <string name="weight">Weight</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lose">Lose</string>
    <string name="maintain">Maintain</string>
    <string name="gain">Gain</string>
    <string name="set_goals">Set Goals</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="pounds">lbs</string>
    <string name="gender">Gender</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="height">Height</string>
    <string name="submit">Submit</string>
    <string name="cal_goal">Calorie Goal:</string>
    <string name="about">About PaceEats</string>
    <string name="devs">Developers</string>
    <string name="kevin">• Kevin Lutz</string>
    <string name="ty">• Tyheir Brooks</string>
    <string name="paul">• Paul Spadaccini</string>
    <string name="aleya">• Aleya Corretjer</string>
    <string name="description">PaceEats was created for a CS389: Software Engineering Fall 2021 semester course at Pace University by four senior Computer Science majors.\n\nIt\'s purpose is to allow Pace students to track their caloric intake as well as the environmental impact of the foods that they are eating.</string>
    <string name="food_recs">Food Recommendations</string>
    <string name="first_start_with_white_rice_from_the_chinese_station_order_a_turkey_burger_with_peppers_and_onions_from_the_grill_station_ask_them_to_chop_the_burger_then_add_the_chopped_burger_with_your_toppings_to_the_white_rice_add_sauce_if_you_would_like">First start with white rice from the Chinese Station. Order a turkey burger with peppers and onions from the Grill Station. Ask them to chop the burger. Then add the chopped burger with your toppings to the white rice. Add sauce if you would like.</string>
    <string name="wrap">Wrap</string>
    <string name="for_a_nice_yummy_wrap_from_the_sandwich_station_order_a_whole_wheat_spinach_or_tomato_wrap_add_grilled_chicken_mozzarella_cheese_roasted_red_peppers_and_a_little_of_balsamic_dressing">For a nice yummy wrap from the Sandwich Station order a whole wheat, spinach or tomato wrap. Add grilled chicken, mozzarella cheese, roasted red peppers, and a little of balsamic dressing.</string>
    <string name="omlete">Omlete</string>
    <string name="omelette">Omelette</string>
    <string name="start_your_morning_off_with_a_healthy_breakfast_from_the_gill_station_order_an_egg_white_omlete_with_toppings_like_spinach_peppers_onions_chese_tomatoes_etc_you_could_pair_this_with_a_yogurt_or_smoothie_from_the_smoothie_station">Start your morning off with a healthy breakfast. From the Gill Station order an egg white omelette with toppings like spinach, peppers, onions, cheese, tomatoes, etc. You could pair this with a yogurt or smoothie from the Smoothie Station.</string>
    <string name="rice_bowl">Rice Bowl</string>
    <string name="footprint_text">3 lbs CO2</string>
    <string name="app_streak">App Streak</string>
    <string name="carbon_footprint">Carbon Footprint Today</string>
    <string name="streakText">7 days</string>
    <string name="user_start_weight">TextView</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Enter Current Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="github">GitHub Page</string>
    <string name="view_account">View Account</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="custom_food_track">Log Custom Food</string>
    <string name="calories">Calories</string>
    <string name="lbs_co2">lbs of CO2 (optional)</string>
    <string name="slash">/</string>
    <string name="reset_current_cals">Reset Current Calories and CO2</string>
    <string name="buttonWorkout">Workouts</string>
    <string name="progress_string">Progress</string>
    <string name="starting_weight_string">Starting Weight</string>
    <string name="current_weight_string">Current Weight</string>
    <string name="log_calories">Log Calories</string>
    <string name="enter_current_weight">Enter Current Weight</string>
    <string name="current_weight_text">Current Weight</string>
    <string-array name="suggested_foods">
        <item>Rice Bowl</item>
        <item>Wrap</item>
        <item>Omelette</item>
    </string-array>
</resources>