<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetGoalsActivity">

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/set_goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:text="@string/height"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/inputHeightFeet"
        app:layout_constraintTop_toTopOf="@+id/inputHeightFeet" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/inputWeight"
        app:layout_constraintTop_toTopOf="@+id/inputWeight" />

    <EditText
        android:id="@+id/inputHeightFeet"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/feet"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/inputHeightInches"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <EditText
        android:id="@+id/inputHeightInches"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/inches"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />

    <RadioGroup
        android:id="@+id/goalRadioGroup"
        android:layout_width="97dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight">

        <RadioButton
            android:id="@+id/radioLose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lose" />

        <RadioButton
            android:id="@+id/radioMaintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintain" />

        <RadioButton
            android:id="@+id/radioGain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gain" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewWeightGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="60dp"
        android:text="@string/weight_goal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/goalRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/goalRadioGroup" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeightFeet" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/inputAge"
        app:layout_constraintTop_toTopOf="@+id/inputAge" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/genderRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/genderRadioGroup" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:onClick="onSubmit"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>