<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreActivity">


    <Button
        android:id="@+id/button_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchHome"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_nutrition"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchNutrition"
        android:text="@string/nutrition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_weight" />

    <Button
        android:id="@+id/button_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchWeight"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_more" />

    <Button
        android:id="@+id/button_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchMore"
        android:text="@string/button_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="537dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchAbout"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/about"
            android:textSize="20sp"
            tools:text="@string/about" />

        <Button
            android:id="@+id/button_foodrec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LaunchFoodRecommendations"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/food_recs"
            android:textSize="20sp"
            tools:text="@string/food_recs" /><![CDATA[



        android:paddingBottom="20dp" />




        ]]>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchSettings"

            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/settings"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/buttonWorkouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            android:onClick="launchWorkout"
            android:text="@string/buttonWorkout" />

        android:paddingBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>