<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/textPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/textEmail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="241dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="247dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>