<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchHome"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_nutrition"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchNutrition"
        android:text="@string/nutrition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_weight" />

    <Button
        android:id="@+id/button_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchWeight"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_more" />

    <Button
        android:id="@+id/button_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        android:onClick="launchMore"
        android:text="@string/button_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textCalorieGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalGoal" />

    <TextView
        android:id="@+id/textViewCalGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/cal_goal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/currentFootprint"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_round"
        android:text="@string/footprint_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/appStreak"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_round"
        android:text="@string/streakText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footprint"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/carbon_footprint"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentFootprint"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appstreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_streak"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appStreak"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Goals: Go to the Gym 5/7"
            android:onClick="launchMore"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/weight_otd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weight: Weight for the day"
            android:onClick="launchWeight"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/foodrec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Food Reccomendations: Banana"
            android:onClick="launchNutrition"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/nutrition_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchNutrition"
            android:text="Nutrition: Input food"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/weight_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchWeight"
            android:text="Weight: Track weight for the week" />

        <Button
            android:id="@+id/more_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="More: Track Leaderboard"
            android:onClick="launchMore"/>

        <Button
            android:id="@+id/more_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="More: Invite Friends"
            android:onClick="launchMore"/>

        <Button
            android:id="@+id/more_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="More: Settings"
            android:onClick="launchMore"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>